Changed the way tags are displayed on vertical pages.

--- a/app/assets/stylesheets/vertical.css.scss
+++ b/app/assets/stylesheets/vertical.css.scss
@@ -4,6 +4,8 @@
  *
  * Created by hfeild on 06-Apr-2017.
  */
+@import "bootstrap";
+ 
 
 .index-entry {
   display: block;  
@@ -34,4 +36,27 @@
 
 li .snippet {
   color: #555;
+}
+
+.metadata {
+  td, th {
+    padding-right: 2em;
+  }
+}
+
+.tag-badge {
+  font-size: 85%;
+  border-radius: 2em;
+  background-color: lighten($brand-primary, 0%);
+  display: inline-block;
+  padding-left: .5em;
+  padding-right: .5em;
+  color: white;
+  a, a:active, a:hover, a:visited {
+    color: white;
+  }
+  
+  .edit:hover, .delete:hover {
+    color: #ccc;
+  }
 }
