--- a/app/views/analyses/show.html.erb
+++ b/app/views/analyses/show.html.erb
@@ -39,7 +39,7 @@
       ></a>
     <% end %>
     <ul>
-      <%= render(partial: "tags/tag_list_item", 
+      <%= render(partial: "tags/tag_badge", 
         collection: sort_by(@analysis.tags, :text), as: :tag,
         locals: {print_header: true, vertical: @analysis}) || 
         "There are currently no tags associated with this analysis." %>
