--- a/app/views/verticals_shared/_related_vertical.html.erb
+++ b/app/views/verticals_shared/_related_vertical.html.erb
@@ -10,6 +10,9 @@ This is expecting the following local variables:
   data -- defaults to vertical_from.public_send(vertical_to_name)
   title_tag -- defaults to h2; this is the tag to use for the title.
 %>
+  <% if not defined?(editable) %>
+    <% editable = false %>
+  <% end %>
   <% vertical_from_name = vertical_from.class.to_s.downcase %>
   <% vertical_to_name = vertical_to.class.to_s.downcase %>
   <% vertical_to_names = vertical_to_name.pluralize(2) %>
