--- a/app/views/datasets/index.html.erb
+++ b/app/views/datasets/index.html.erb
@@ -2,9 +2,14 @@
 <div class="container">
 
   <h1>Dataset</h1>
-  <button class="btn btn-sm btn-default"><%= link_to "Add a dataset", new_dataset_path %></button>
 
-  <div id="dataset-entries">
+  <% if can_edit? %>
+    <%= link_to(new_dataset_path) do 
+      %><button class="btn btn-sm btn-default">Add a dataset</button
+    ><% end %>
+  <% end %>
+
+  <div id="dataset-entries" class="entries">
     <%= render @datasets %>
   </div>
 
