--- a/app/views/software/index.html.erb
+++ b/app/views/software/index.html.erb
@@ -2,9 +2,14 @@
 <div class="container">
 
   <h1>Software</h1>
-  <button class="btn btn-sm btn-default"><%= link_to "Add a software", new_software_path %></button>
 
-  <div id="software-entries">
+  <% if can_edit? %>
+    <%= link_to(new_software_path) do 
+      %><button class="btn btn-sm btn-default">Add software</button
+    ><% end %>
+  <% end %>
+
+  <div id="software-entries" class="entries">
     <%= render @software %>
   </div>
 
