--- a/app/views/analyses/show.html.erb
+++ b/app/views/analyses/show.html.erb
@@ -2,18 +2,17 @@
 <div class="container analysis-page" data-analysis-id="<%= @analysis.id %>">
   <h1><span class="name"><%= @analysis.name %></span>
   <% if can_edit? %>
-    <%= link_to edit_analysis_path(@analysis.id)  do %>
-      <button type="button" class="btn btn-default btn-sm">
+    <%= link_to edit_analysis_path(@analysis.id)  do 
+      %><button type="button" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
-      </button>
-    <% end %>
-
+      </button
+    ><% end %>
     <%= link_to @analysis, method: :delete, data: {
-        confirm: "Are you sure you want to delete this page?"} do %> 
-      <button type="button" class="btn btn-default btn-sm">
+        confirm: "Are you sure you want to delete this page?"} do 
+      %><button type="button" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
-      Delete </button>
-    <% end %>
+      Delete </button
+    ><% end %>
   <% end %>
   </h1>
 
