--- a/app/views/datasets/show.html.erb
+++ b/app/views/datasets/show.html.erb
@@ -2,18 +2,17 @@
 <div class="container dataset-page" data-dataset-id="<%= @dataset.id %>">
   <h1><span class="name"><%= @dataset.name %></span>
   <% if can_edit? %>
-    <%= link_to edit_dataset_path(@dataset.id)  do %>
-      <button type="button" class="btn btn-default btn-sm">
+    <%= link_to edit_dataset_path(@dataset.id)  do  
+      %><button type="button" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
-      </button>
-    <% end %>
-
+      </button
+    ><% end %>
     <%= link_to @dataset, method: :delete, data: {
-        confirm: "Are you sure you want to delete this page?"} do %> 
-      <button type="button" class="btn btn-default btn-sm">
+        confirm: "Are you sure you want to delete this page?"} do  
+      %><button type="button" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
-      Delete </button>
-    <% end %>
+      Delete </button
+    ><% end %>
   <% end %>
   </h1>
 
