--- a/app/views/software/show.html.erb
+++ b/app/views/software/show.html.erb
@@ -2,18 +2,17 @@
 <div class="container software-page" data-software-id="<%= @software.id %>">
   <h1><span class="name"><%= @software.name %></span>
   <% if can_edit? %>
-    <%= link_to edit_software_path(@software.id)  do %>
-      <button type="button" class="btn btn-default btn-sm">
+    <%= link_to edit_software_path(@software.id)  do  
+      %><button type="button" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
-      </button>
-    <% end %>
-
+      </button
+    ><% end %>
     <%= link_to @software, method: :delete, data: {
-        confirm: "Are you sure you want to delete this page?"} do %> 
-      <button type="button" class="btn btn-default btn-sm">
+        confirm: "Are you sure you want to delete this page?"} do  
+      %><button type="button" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
-      Delete </button>
-    <% end %>
+      Delete </button
+    ><% end %>
   <% end %>
   </h1>
 
