--- a/app/assets/stylesheets/vertical.css.scss
+++ b/app/assets/stylesheets/vertical.css.scss
@@ -5,6 +5,10 @@
  * Created by hfeild on 06-Apr-2017.
  */
 
+.added.index-entry {
+    background-color: #d9e8d9;
+}
+
 .index-entry {
   display: block;  
   min-height: 3em;
@@ -14,7 +18,6 @@
   border: 1px solid gray;
 
   &:hover {
-    background-color: #d9e8d9;
     text-decoration: none;
   }
 
