--- a/app/views/software/connect_index.html.erb
+++ b/app/views/software/connect_index.html.erb
@@ -6,6 +6,10 @@
   <%= link_to @vertical.name, get_vertical_path(@vertical) %>.
   </p>
 
+  <a href="<%= get_vertical_path(@vertical) %>"
+    ><button class="btn btn-md btn-default">Done</button
+  ></a>
+
   <div class="row">
     <div class="col-md-12 col-md-offset-0">
       <% if @software.empty? %>
@@ -23,4 +27,8 @@
       <% end %> 
     </div>
   </div>
+  
+  <a href="<%= get_vertical_path(@vertical) %>"
+    ><button class="btn btn-md btn-default">Done</button
+  ></a>
 </div>
