--- a/app/views/assignments/connect_index.html.erb
+++ b/app/views/assignments/connect_index.html.erb
@@ -1,11 +1,15 @@
-<% provide(:title, "Choose assignment") %>
+<% provide(:title, "Connect assignments") %>
 <div class="container resource-modification">
   <h1><%= yield :title %></h1>
   <p>
-  Choose an assignment to link from
+  Choose assignments to associate with
   <%= link_to @vertical.name, get_vertical_path(@vertical) %>.
   </p>
 
+  <a href="<%= get_vertical_path(@vertical) %>"
+    ><button class="btn btn-md btn-default">Done</button
+  ></a>
+  
   <div class="row">
     <div class="col-md-12 col-md-offset-0">
       <% if @assignments.empty? %>
@@ -23,4 +27,9 @@
       <% end %> 
     </div>
   </div>
+  
+  <a href="<%= get_vertical_path(@vertical) %>"
+    ><button class="btn btn-md btn-default">Done</button
+  ></a>
+  
 </div>
