--- a/app/views/software/connect_index.html.erb
+++ b/app/views/software/connect_index.html.erb
@@ -1,8 +1,8 @@
-<% provide(:title, "Choose software") %>
+<% provide(:title, "Connect software") %>
 <div class="container resource-modification">
   <h1><%= yield :title %></h1>
   <p>
-  Choose an software to link from
+  Choose software to associate with
   <%= link_to @vertical.name, get_vertical_path(@vertical) %>.
   </p>
 
