--- a/app/views/analyses/_analysis_index_item.html.erb
+++ b/app/views/analyses/_analysis_index_item.html.erb
@@ -1,19 +1,35 @@
-<div data-analysis-id="<%= analysis.id %>" class="analysis index-entry">
-
-  <div class="connect-resource">
-    <%= form_for(analysis, 
-        url: vertical_vertical_path(@vertical, analysis), 
-        method: :post, html: {style: 'display: inline'}) do |f| %>
-      <% if (@vertical.class == Analysis and 
+<% ## This produces connections that can be interacted with via 
+   ## javascript + AJAX. 
+%>
+<% 
+if (@vertical.class == Analysis and 
               @vertical.analyses_related_to.exists?(analysis.id)) or
             (@vertical.class != Analysis and 
-              @vertical.analyses.exists?(analysis.id)) %>
-        <button class="btn btn-sm btn-default" disabled="disabled">Already added</button>
-      <% else %>
-        <button class="btn btn-sm btn-default">Add</button>
-      <% end %>
-    <% end %>
+              @vertical.analyses.exists?(analysis.id))
+  remove_classes = ""
+  add_classes = "hidden"
+  status = "added"  
+else
+  remove_classes = "hidden"
+  add_classes = ""
+  status = ""
+end
+%>
+  
+
+<div data-analysis-id="<%= analysis.id %>" 
+    class="analysis index-entry <%= status %>">
+  <div class="connect-resource" 
+      data-url="<%= vertical_vertical_path(@vertical, analysis) %>">
+      
+    <button data-action="remove" 
+      class="btn btn-sm btn-default remove-connection <%= remove_classes %>"
+      >Remove</button>
+    <button data-action="add" 
+      class="btn btn-sm btn-default add-connection <%= add_classes %>"
+      >Add</button>
   </div>
+
 
   <span class="entry-data-wrapper">
     <span class="name"><%= analysis.name %></span>
