--- a/app/views/assignments/_assignment_index_item.html.erb
+++ b/app/views/assignments/_assignment_index_item.html.erb
@@ -1,18 +1,32 @@
-<div data-assignment-id="<%= assignment.id %>" class="assignment index-entry">
-
-  <div class="connect-resource">
-    <%= form_for(assignment, 
-        url: vertical_vertical_path(@vertical, assignment), 
-        method: :post, html: {style: 'display: inline'}) do |f| %>
-      <% if (@vertical.class == Assignment and 
+<% ## This produces connections that can be interacted with via 
+   ## javascript + AJAX. 
+%>
+<% 
+if (@vertical.class == Assignment and 
               @vertical.assignments_related_to.exists?(assignment.id)) or
             (@vertical.class != Assignment and 
-              @vertical.assignments.exists?(assignment.id)) %>
-        <button class="btn btn-sm btn-default" disabled="disabled">Already added</button>
-      <% else %>
-        <button class="btn btn-sm btn-default">Add</button>
-      <% end %>
-    <% end %>
+              @vertical.assignments.exists?(assignment.id))
+  remove_classes = ""
+  add_classes = "hidden"
+  status = "added"  
+else
+  remove_classes = "hidden"
+  add_classes = ""
+  status = ""
+end
+%>
+
+<div data-assignment-id="<%= assignment.id %>" 
+    class="assignment index-entry <%= status %>">
+  <div class="connect-resource" 
+      data-url="<%= vertical_vertical_path(@vertical, assignment) %>">
+      
+    <button data-action="remove" 
+      class="btn btn-sm btn-default remove-connection <%= remove_classes %>"
+      >Remove</button>
+    <button data-action="add" 
+      class="btn btn-sm btn-default add-connection <%= add_classes %>"
+      >Add</button>
   </div>
 
   <span class="entry-data-wrapper">
