--- a/app/views/examples/_example_index_item.html.erb
+++ b/app/views/examples/_example_index_item.html.erb
@@ -1,14 +1,30 @@
-<div data-example-id="<%= example.id %>" class="example index-entry">
+<% ## This produces connections that can be interacted with via 
+   ## javascript + AJAX. 
+%>
+<% 
+if @vertical.examples.exists?(example.id)
+  remove_classes = ""
+  add_classes = "hidden"
+  status = "added"  
+else
+  remove_classes = "hidden"
+  add_classes = ""
+  status = ""
+end
+%>
+  
 
-  <div class="connect-resource">
-    <%= form_for(example, url: vertical_example_path(@vertical, example), 
-        method: :post, html: {style: 'display: inline'}) do |f| %>
-      <% if @vertical.examples.exists?(example.id) %>
-        <button class="btn btn-sm btn-default" disabled="disabled">Already added</button>
-      <% else %>
-        <button class="btn btn-sm btn-default">Add</button>
-      <% end %>
-    <% end %>
+<div data-example-id="<%= example.id %>" 
+    class="example index-entry <%= status %>">
+  <div class="connect-resource" 
+      data-url="<%= vertical_example_path(@vertical, example) %>">
+      
+    <button data-action="remove" 
+      class="btn btn-sm btn-default remove-connection <%= remove_classes %>"
+      >Remove</button>
+    <button data-action="add" 
+      class="btn btn-sm btn-default add-connection <%= add_classes %>"
+      >Add</button>
   </div>
 
   <a href="<%= example_path(example) %>" class="entry-data-wrapper">
