--- a/app/views/examples/index.html.erb
+++ b/app/views/examples/index.html.erb
@@ -1,16 +1,14 @@
-<% provide(:title, "Choose example") %>
+<% provide(:title, "Connect examples") %>
 <div class="container resource-modification">
   <h1><%= yield :title %></h1>
   <p>
-  Choose an example to associated with 
+  Choose examples to associated with 
   <%= link_to @vertical.name, get_vertical_path(@vertical) %>.
   </p>
-
-  <%= link_to get_vertical_path(@vertical) do %>
-    <button class="btn btn-sm btn-default">
-      Back
-    </button>
-  <% end %>
+  
+  <a href="<%= get_vertical_path(@vertical) %>"
+    ><button class="btn btn-md btn-default">Done</button
+  ></a>
 
 
   <div class="row">
@@ -26,4 +24,9 @@
       <% end %> 
     </div>
   </div>
+  
+  <a href="<%= get_vertical_path(@vertical) %>"
+    ><button class="btn btn-md btn-default">Done</button
+  ></a>
+  
 </div>
