--- a/app/views/tags/_tag_index_item.html.erb
+++ b/app/views/tags/_tag_index_item.html.erb
@@ -1,15 +1,31 @@
-<div data-tag-id="<%= tag.id %>" class="tag index-entry">
+<% ## This produces connections that can be interacted with via 
+   ## javascript + AJAX. 
+%>
+<% 
+if @vertical.tags.exists?(tag.id)
+  remove_classes = ""
+  add_classes = "hidden"
+  status = "added"  
+else
+  remove_classes = "hidden"
+  add_classes = ""
+  status = ""
+end
+%>
 
-  <div class="connect-resource">
-    <%= form_for(tag, 
-        url: vertical_tag_path(@vertical, tag), 
-        method: :post, html: {style: 'display: inline'}) do |f| %>
-      <% if @vertical.tags.exists?(tag.id) %>
-        <button class="btn btn-sm btn-default" disabled="disabled">Already added</button>
-      <% else %>
-        <button class="btn btn-sm btn-default">Add</button>
-      <% end %>
-    <% end %>
+
+
+<div data-tag-id="<%= tag.id %>" 
+    class="tag index-entry <%= status %>">
+  <div class="connect-resource" 
+      data-url="<%= vertical_tag_path(@vertical, tag) %>">
+      
+    <button data-action="remove" 
+      class="btn btn-sm btn-default remove-connection <%= remove_classes %>"
+      >Remove</button>
+    <button data-action="add" 
+      class="btn btn-sm btn-default add-connection <%= add_classes %>"
+      >Add</button>
   </div>
 
   <span class="entry-data-wrapper">
