--- a/app/views/assignments/_modify_form.html.erb
+++ b/app/views/assignments/_modify_form.html.erb
@@ -63,11 +63,12 @@
         id: "form-submit", class: "btn btn-primary" %>
 
       
-      <button class="btn btn-danger link" 
+      <button class="btn btn-danger link no-submit"
         data-href="<%= @assignment.id.nil? ? assignments_path : 
           assignment_path(@assignment) %>">Cancel</button>
-
+          
       <% end %>
+
     </div>
   </div>
 
