--- a/app/views/assignments/_modify_form.html.erb
+++ b/app/views/assignments/_modify_form.html.erb
@@ -33,7 +33,7 @@
       </div>
 
       <div class="form-group">
-        <%= f.label :description %><span class="required-input">*</span><br/>
+        <%= f.label :description %><br/>
         This should be a detailed description of the assignment and how to use it.
         <%= f.bootsy_area :description,  
           rows: 10, class: "form-control add-to-vertical unchanged",
