--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -60,7 +60,10 @@
   <div class="description-wrapper">
     <h2>Description</h2>
     <iframe class="description embed-html" 
-      data-html="<%= url_encode @assignment.description.html_safe %>"></iframe>
+      data-html="<%= url_encode(
+        @assignment.description.empty? \
+          ? "<em>None</em>" \
+          : @assignment.description.html_safe) %>"></iframe>
   </div>
 
   <div class="web-resources">
