Fixed cancel button for all verticals; added a cancel button to signup and settings.

--- a/app/views/datasets/_modify_form.html.erb
+++ b/app/views/datasets/_modify_form.html.erb
@@ -44,7 +44,7 @@
         id: "form-submit", class: "btn btn-primary" %>
 
       
-      <button class="btn btn-danger link" 
+      <button class="btn btn-danger link no-submit" 
         data-href="<%= @dataset.id.nil? ? datasets_path : 
           dataset_path(@dataset) %>">Cancel</button>
 
