--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -58,6 +58,9 @@
     </div>
 
     <%= f.submit "Create my account", class: "btn btn-primary" %>
+    
+    <button class="btn btn-danger link no-submit" 
+          data-href="<%= root_path %>">Cancel</button>
     <% end %>
   </div>
   </div>
