--- a/app/views/analyses/_modify_form.html.erb
+++ b/app/views/analyses/_modify_form.html.erb
@@ -44,7 +44,7 @@
         id: "form-submit", class: "btn btn-primary" %>
 
       
-      <button class="btn btn-danger link" 
+      <button class="btn btn-danger link no-submit" 
         data-href="<%= @analysis.id.nil? ? analyses_path : 
           analysis_path(@analysis) %>">Cancel</button>
 
