--- a/app/views/software/_modify_form.html.erb
+++ b/app/views/software/_modify_form.html.erb
@@ -46,7 +46,7 @@
         id: "form-submit", class: "btn btn-primary" %>
 
       
-      <button class="btn btn-danger link" 
+      <button class="btn btn-danger link no-submit" 
         data-href="<%= @software.id.nil? ? software_index_path : 
           software_path(@software) %>">Cancel</button>
 
