--- a/app/views/tags/_modify_form.html.erb
+++ b/app/views/tags/_modify_form.html.erb
@@ -25,7 +25,7 @@
         <%= f.submit "Save", id: "form-submit", class: "btn btn-primary" %>
 
         
-        <button class="btn btn-danger link" 
+        <button class="btn btn-danger link no-submit" 
           data-href="<%= @back_path %>">Cancel</button>
       <% end %>
     </div>
