--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,8 +1,8 @@
 <% provide(:title, "Settings") %>
-<h1>Update your profile</h1>
 
 <div class="row settings">
   <div class="col-md-6 col-md-offset-3">
+  <h1>Update your profile</h1>
 
     <div class="form-container">
       <p class="instructions">
@@ -92,7 +92,7 @@
         </div>
 
         <div class="form-group">
-        <%= f.label :password_confirmation, "Confirmation" %>
+        <%= f.label :password_confirmation, "Confirm password" %>
         <%= f.password_field :password_confirmation, class: 'form-control', 
             placeholder: "Repeat your new password" %>
         </div>
