Added a mailer to notify admins.

--- a/app/views/user_mailer/account_activation.text.erb
+++ b/app/views/user_mailer/account_activation.text.erb
@@ -2,7 +2,7 @@ Alice Account Activation
 
 Hi <%= @user.first_name %>,
 
-Welcome to CodeAnnotator! Please click on the link below to activate your 
+Welcome to Alice! Please click on the link below to activate your 
 account:
 
 <%= edit_account_activation_url(@user.activation_token, username: @user.username) %>
