Completed the user rake file.
Added a gem to read in passwords from the command line without echoing their
content on the command line.

Fixed some bugs with the admin mailer.

--- a/app/views/admin_mailer/permission_request_notification.html.erb
+++ b/app/views/admin_mailer/permission_request_notification.html.erb
@@ -6,7 +6,7 @@
 As an admin, we are notifying you that the user <%= @user.username %> has
 requested to change their permission level from <%= @user.permission_level %> to 
 <%= @permission_request.level_requested %>. You can decline or grant this
-request <%= link_to "here", show_permission_request_url(@permission_request) %>
+request <%= link_to "here", permission_request_url(@permission_request) %>
 </p>
 
 <p>
