Added a user index available to admins.

--- a/app/views/permission_requests/_requests.html.erb
+++ b/app/views/permission_requests/_requests.html.erb
@@ -1,4 +1,4 @@
-<table class="permission-requests-table">
+<table class="permission-requests-table table table-striped">
   <tr>
     <th>Username</th>
     <th>Current permission level</th>
@@ -30,6 +30,7 @@
           </button>
         <% end %>
       </td>
+    </tr>
   <% end %>
   
 </table>
