Updated attachment routes; added a 'new' partial for attachments and integrated with application vertical.

--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -66,6 +66,13 @@
           : @assignment.description.html_safe) %>"></iframe>
   </div>
 
+  <div class="file-attachments">
+    <h2>File attachments</h2>
+    <% if can_edit? %>
+      <%= render(partial: "attachments/new", locals: {vertical: @assignment}) %>
+    <% end %>
+  </div>
+
   <div class="web-resources">
     <h2>Web resources</h2>
     <% if can_edit? %>
