--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -66,12 +66,14 @@
           : @assignment.description.html_safe) %>"></iframe>
   </div>
 
-  <div class="file-attachments">
-    <h2>File attachments</h2>
-    <% if can_edit? %>
-      <%= render(partial: "attachments/new", locals: {vertical: @assignment}) %>
-    <% end %>
-  </div>
+    
+  <%= render(partial: "attachments/attachment_list",
+  locals: { 
+     vertical_from: @assignment, 
+     data: @assignment.attachments,
+     editable: true,
+     title_tag: :h3 }) %>
+
 
   <div class="web-resources">
     <h2>Web resources</h2>
