--- a/app/views/attachments/_new.html.erb
+++ b/app/views/attachments/_new.html.erb
@@ -1,13 +1,15 @@
 <%# 
 This is expecting the following local variables:
 
-  vertical_from -- the vertical or example the attachment will be associated 
-                   with.
+  vertical -- the vertical or example the attachment will be associated 
+              with.
 %>
 
 <div class="attachment-form-wrapper">
   <%= form_for Attachment.new, url: vertical_attachments_path(vertical), 
-        html: { multipart: true } do |form| %>
-    <%= form.file_field :file_attachment %>
+        html: { multipart: true } do |f| %>
+    <%= f.file_field :file_attachment %>
+    <%= f.submit "Uplaod", 
+        id: "form-submit", class: "btn btn-sm btn-primary" %>
   <% end %>
 </div>
