--- a/app/views/attachments/_new.html.erb
+++ b/app/views/attachments/_new.html.erb
@@ -10,7 +10,7 @@ This is expecting the following local variables:
   <%= form_for Attachment.new, url: vertical_attachments_path(vertical), 
         html: { multipart: true } do |f| %>
     <%= f.file_field :file_attachment, id: "upload-attachment-field", class: "submit-toggle-field" %>
-    <%= f.submit "Uplaod", 
+    <%= f.submit "Upload", 
        id: "upload-attachment-submit", class: "btn btn-sm btn-primary", disabled: "disabled" %>
   <% end %>
 </div>
