--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -10,8 +10,8 @@
 
     <div>
       <ul class="nav navbar-nav navbar-left">
-        <li><%= link_to 'About', '#' %></li>
-        <li><%= link_to 'Contact', '#' %></li>
+        <!-- <li><%= link_to 'About', '#' %></li>
+        <li><%= link_to 'Contact', '#' %></li> -->
       </ul>
     </div>
 
