--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -29,8 +29,8 @@
           <li>
             <%= link_to "Home", root_path %>
           </li>
-          <li><%= link_to "About", "#" %></li>
-          <li><%= link_to "Help", "#" %></li>
+          <!-- <li><%= link_to "About", "#" %></li>
+          <li><%= link_to "Help", "#" %></li> -->
           <% if logged_in? %>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
