Canceling from any form now sends you back using the referrer path.

--- a/app/views/examples/_modify_form.html.erb
+++ b/app/views/examples/_modify_form.html.erb
@@ -34,7 +34,7 @@
 
         
         <button class="btn btn-danger link no-submit" 
-          data-href="<%= @back_path %>">Cancel</button>
+          data-href="<%= url_for :back %>">Cancel</button>
       <% end %>
     </div>
   </div>
