--- a/app/views/analyses/_modify_form.html.erb
+++ b/app/views/analyses/_modify_form.html.erb
@@ -45,8 +45,7 @@
 
       
       <button class="btn btn-danger link no-submit" 
-        data-href="<%= @analysis.id.nil? ? analyses_path : 
-          analysis_path(@analysis) %>">Cancel</button>
+        data-href="<%= url_for :back %>">Cancel</button>
 
       <% end %>
     </div>
