--- a/app/views/assignment_results/_modify_form.html.erb
+++ b/app/views/assignment_results/_modify_form.html.erb
@@ -117,7 +117,7 @@
 
         
         <button class="btn btn-danger link no-submit" 
-          data-href="<%= @back_path %>">Cancel</button>
+          data-href="<%= url_for :back %>">Cancel</button>
       <% end %>
     </div>
   </div>
