--- a/app/views/assignments/_modify_form.html.erb
+++ b/app/views/assignments/_modify_form.html.erb
@@ -64,8 +64,7 @@
 
       
       <button class="btn btn-danger link no-submit"
-        data-href="<%= @assignment.id.nil? ? assignments_path : 
-          assignment_path(@assignment) %>">Cancel</button>
+        data-href="<%= url_for :back %>">Cancel</button>
           
       <% end %>
 
