--- a/app/views/datasets/_modify_form.html.erb
+++ b/app/views/datasets/_modify_form.html.erb
@@ -45,8 +45,7 @@
 
       
       <button class="btn btn-danger link no-submit" 
-        data-href="<%= @dataset.id.nil? ? datasets_path : 
-          dataset_path(@dataset) %>">Cancel</button>
+        data-href="<%= url_for :back %>">Cancel</button>
 
       <% end %>
     </div>
