--- a/app/views/software/_modify_form.html.erb
+++ b/app/views/software/_modify_form.html.erb
@@ -47,8 +47,7 @@
 
       
       <button class="btn btn-danger link no-submit" 
-        data-href="<%= @software.id.nil? ? software_index_path : 
-          software_path(@software) %>">Cancel</button>
+        data-href="<%= url_for :back %>">Cancel</button>
 
       <% end %>
     </div>
