--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -104,7 +104,7 @@
           <%= f.submit "Update information", class: "btn btn-primary" %>
           
           <button class="btn btn-danger link no-submit" 
-            data-href="<%= root_path %>">Cancel</button>
+            data-href="<%= url_for :back %>">Cancel</button>
             
         <% end %>
     </div>
@@ -138,7 +138,7 @@
         <%= f.submit "Change password", class: "btn btn-primary" %>
         
         <button class="btn btn-danger link no-submit" 
-          data-href="<%= root_path %>">Cancel</button>
+          data-href="<%= url_for :back %>">Cancel</button>
           
       <% end %>
     </div>
