--- a/app/views/tags/_tag_badge.html.erb
+++ b/app/views/tags/_tag_badge.html.erb
@@ -7,7 +7,7 @@
       %><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span
     ><% end %>
     
-    <%= link_to(edit_vertical_tag_path(vertical, tag), class: :delete, options: {method: :delete}) do 
+    <%= link_to(vertical_tag_path(vertical, tag), method: :delete, class: :delete) do 
       %><span class="glyphicon glyphicon-trash" aria-hidden="true"></span
     ><% end %>
   <% end %>
