--- a/app/views/search/_advanced_search_box.html.erb
+++ b/app/views/search/_advanced_search_box.html.erb
@@ -101,7 +101,7 @@
   <h2>Which vertical do you want to search?</h2>
   <div class="form-group">
     <input type="radio" name="vertical" value="all" 
-      <%= @vertical == 'all' ? '' : 'checked="checked"' %>/> All verticals<br/> /*I HAVE MADE A CHANGE HERE*/
+      <%= @vertical == 'all' ? '' : 'checked="checked"' %>/> All verticals<br/>
     <input type="radio" name="vertical" value="assignments" 
       <%= @vertical == 'assignments' ? 'checked="checked"' : '' %>/> 
       Assignments<br/>
