--- a/app/views/assignments/_assignment.html.erb
+++ b/app/views/assignments/_assignment.html.erb
@@ -1,10 +1,16 @@
 
-<a href="<%= assignment_path(assignment.id) %>" 
-  data-assignment-id="<%= assignment.id %>" class="assignment index-entry">
+<div class="assignment index-entry">
+  <a href="<%= assignment_path(assignment.id) %>" 
+  data-assignment-id="<%= assignment.id %>"><span class="name"><%= assignment.name %></span></a>
 
-  <span class="name"><%= assignment.name %></span>
-  <span class="author">By: <%= assignment.author %></span>, created on <%= assignment.created_on %><br/> 
-  <span class="summary"><%= assignment.summary %></span><br/>
-  <span class="learning_curve">Learning curve: <%= assignment.learning_curve %></span>, <span class="years">Taught <%= assignment.assignment_results.size %> time(s)</span>
-  
-</a>
+  <span class="metadata"><span class="author"><%= assignment.author %></span> <span class="date">(<%= assignment.created_at.strftime('%B %Y') %>)</span></span>
+
+  <span class="summary"><%= assignment.summary %></span>
+
+  <span class="metadata">
+    <span class="learning_curve">Learning curve: <i><%= assignment.learning_curve == "" ? "unknown" : assignment.learning_curve %></i></span><br/>
+    <span class="years">Taught <%= assignment.assignment_results.size %> <%= 'time'.pluralize(assignment.assignment_results.size) %></span><br/>
+    <span class="tags"><%= render(partial: "tags/tag_badge", 
+    collection: sort_by(assignment.tags, :text), as: :tag) %></span>
+  </span>
+</div>
