--- a/app/views/assignments/_assignment_search_result.html.erb
+++ b/app/views/assignments/_assignment_search_result.html.erb
@@ -1,7 +1,17 @@
-<div data-assignment-id="<%= assignment.id %>" class="assignment vertical-result-data">
+<div data-assignment-id="<%= assignment.id %>" class="assignment vertical-result-data index-entry">
 
-  <span class="name"><%= link_to assignment.name, assignment_path(assignment) %></span>
-  <span class="snippet"><%= assignment.summary %></span>
-  <span class="score">Score: <%= score %></span>
+  <a href="<%= assignment_path(assignment.id) %>" 
+    data-assignment-id="<%= assignment.id %>"><span class="name"><%= assignment.name %></span></a>
+
+  <span class="metadata"><span class="author"><%= assignment.author %></span> <span class="date">(<%= assignment.created_at.strftime('%B %Y') %>)</span></span>
+
+  <span class="summary"><%= assignment.summary %></span>
+
+  <span class="metadata">
+    <span class="learning_curve">Learning curve: <i><%= assignment.learning_curve == "" ? "unknown" : assignment.learning_curve %></i></span><br/>
+    <span class="years">Taught <%= assignment.assignment_results.size %> <%= 'time'.pluralize(assignment.assignment_results.size) %></span><br/>
+    <span class="tags"><%= render(partial: "tags/tag_badge", 
+    collection: sort_by(assignment.tags, :text), as: :tag) %></span>
+  </span>
 
 </div>
