--- a/app/views/datasets/_dataset.html.erb
+++ b/app/views/datasets/_dataset.html.erb
@@ -1,8 +1,18 @@
 
-<a href="<%= dataset_path(dataset.id) %>" 
-  data-dataset-id="<%= dataset.id %>" class="dataset index-entry">
+<div class="dataset index-entry">
+  <a href="<%= dataset_path(dataset.id) %>" 
+    data-dataset-id="<%= dataset.id %>">
+    <span class="name"><%= dataset.name %></span>
+  </a>
+  <span class="metadata"></span>
 
-  <span class="name"><%= dataset.name %></span>
   <span class="summary"><%= dataset.summary %></span>
+
+  <span class="metadata">
+    <span class="date">Added on <%= dataset.created_at.strftime('%B %d, %Y') %> by <%= dataset.creator.username %></span><br/>
+    <span class="used-in">Used in <%= dataset.assignments.size %> <%= 'assignment'.pluralize(dataset.assignments.size) %> and <%= dataset.examples.size %> <%= 'example'.pluralize(dataset.examples.size) %></span><br/>
+    <span class="tags"><%= render(partial: "tags/tag_badge", 
+    collection: sort_by(dataset.tags, :text), as: :tag) %></span>
+  </span>
   
-</a>
+</div>
