Updated the search result snippet for datasets to include metadata.

--- a/app/views/datasets/_dataset_search_result.html.erb
+++ b/app/views/datasets/_dataset_search_result.html.erb
@@ -1,7 +1,14 @@
-<div data-dataset-id="<%= dataset.id %>" class="dataset vertical-result-data">
+<div data-dataset-id="<%= dataset.id %>" class="dataset vertical-result-data index-entry">
 
   <span class="name"><%= link_to dataset.name, dataset_path(dataset) %></span>
-  <span class="snippet"><%= dataset.summary %></span>
-  <span class="score">Score: <%= score %></span>
 
+  <span class="summary"><%= dataset.summary %></span>
+
+  <span class="metadata">
+    <span class="date">Added on <%= dataset.created_at.strftime('%B %d, %Y') %> by <%= dataset.creator.username %></span><br/>
+    <span class="used-in">Used in <%= dataset.assignments.size %> <%= 'assignment'.pluralize(dataset.assignments.size) %> and <%= dataset.examples.size %> <%= 'example'.pluralize(dataset.examples.size) %></span><br/>
+    <span class="tags"><%= render(partial: "tags/tag_badge", 
+    collection: sort_by(dataset.tags, :text), as: :tag) %></span>
+  </span>
+  
 </div>
