--- a/app/views/tags/_tag.html.erb
+++ b/app/views/tags/_tag.html.erb
@@ -22,17 +22,17 @@
 <% end %>
 
 <%= render(partial: "verticals_shared/related_vertical",
-  locals: {title: "Associated assignments", vertical_from: Tag.new, 
+  locals: {title: "Assignments", vertical_from: tag, 
            vertical_to: Assignment.new}) %>
 
 <%= render(partial: "verticals_shared/related_vertical",
-  locals: {title: "Associated analyses", vertical_from: Tag.new, 
+  locals: {title: "Analyses", vertical_from: tag, 
            vertical_to: Analysis.new}) %>
 
 <%= render(partial: "verticals_shared/related_vertical",
-  locals: {title: "Associated software", vertical_from: Tag.new, 
+  locals: {title: "Software", vertical_from: tag, 
            vertical_to: Software.new}) %>
 
 <%= render(partial: "verticals_shared/related_vertical",
-  locals: {title: "Associated datasets", vertical_from: Tag.new, 
+  locals: {title: "Datasets", vertical_from: tag, 
            vertical_to: Dataset.new}) %>
